<resources>
    <string name="app_name">DigitalRefrige</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_item">ADD</string>
    <string name="add_new_label">ADD</string>
    <string name="delete_current_item">DELETE</string>
    <string name="update_current_item">UPDATE</string>
    <string name="item_name">item name</string>
    <string name="item_description">item description</string>
    <string name="select_date">SELECT EXPIRING DATE</string>
    <string name="take_photo">Take Photo</string>
    <string name="label_name">enter label name</string>
    <string name="Auth_id" translatable="false">117429326790-duhh4hgrj4g9a5ij4segdvblc6u5p8hn.apps.googleusercontent.com</string>
    <string name="channel_name">expiry</string>
    <string name="channel_description">This channel store expiring items and remind user</string>
    <string name="notification_state">notification_state</string>
    <string name="detect_image_object_name">detect</string>
    <string name="export_item_to_calendar">EXPORT TO CALENDAR</string>
    <string name="select_label">select label</string>
    <string name="nfc_display_detail">Expiring</string>
    <string name="nfc_view_item">View Item</string>
    <string name="sign_in_progress">signing you in...</string>
    <string name="notification">Notification</string>
    <string name="label">label</string>
    <string name="expiring_all">all</string>
    <string name="expiring_expiring">expiring</string>
    <string name="expiring_expired">expired</string>
    <string name="add_new_label_textview">Add new label</string>
    <string name="delete_label_textview">Delete existing label</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="profile_email">your email</string>
    <string name="profile_signin_signup">Sign In / Sign Up</string>
    <string name="backup">Backup Data on Cloud</string>
    <string name="backup_date">x days ago</string>
    <string name="export_calendar">Export To Calendar</string>
    <string name="edit_labels">edit labels</string>
    <string name="expire_notification">expire notification</string>
    <string name="logout">logout</string>
</resources>